    outside the TMP directory, neither leave the files behind.
  * If something happens while creating the CObject/Capsule object,
    keep going, even without exporting the C API, instead of crashing.
  * Support for "DB_FORCESYNC", "DB_FAILCHK", "DB_EVENT_REG_ALIVE",
    "DB_EVENT_REG_PANIC", "DB_EVENT_REP_DUPMASTER", "DB_REPMGR_CONF_ELECTIONS",
    "DB_EVENT_REP_ELECTION_FAILED", "DB_EVENT_REP_MASTER_FAILURE".

5.1.0:
  * Support for Berkeley DB 5.1. 
  * Drop support for Berkeley DB 4.1. Our reference
    is Red Had Enterprise Linux 4, until February 2012.
    After that, RHEL5 has Python 2.4 and BDB 4.3.
    * According to http://superuser.com/questions/189931/python-and-berkeley-db-versions-in-redhat-enterprise-linux-3-4-5-and-upcoming-6 :
      * RHEL3: Python 2.2.3, BDB 4.1.25
      * RHEL4: Python 2.3.4, BDB 4.2.52
      * RHEL5: Python 2.4.3, BDB 4.3.29
      * RHEL6: Python 2.6.2, BDB 4.7.25 (Currently in BETA)
  * Include documentation source (*.rst) in the EGG.
  * Include processed HTML documentation in the EGG.
  * Update the external links in documentation, since Oracle changed its web
    structure.
  * Some link fixes for external documentation.
  * Links added in the documentation to Oracle Berkeley DB programmer
    reference.
  * Support for "DB->get_transactional()".
  * Support for "DB_REPMGR_ACKS_ALL_AVAILABLE".

5.0.0:
  * Support for Berkeley DB 5.0.
  * Drop support for Python 3.0.
  * Now you can use TMPDIR env variable to override default
    test directory ("/tmp").
  * Versioning of C API. If you use the code from C, please
    check the bsddb_api->api_version number against
    PYBSDDB_API_VERSION macro.
  * In C code, the bsddb_api->dbsequence_type component is always available,
    even if the Berkeley DB version used doesn't support sequences. In that
    case, the component will be NULL.
  * In C code, "DBSequenceObject_Check()" macro always exists, even if the